<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Test">

    <RadioGroup
        android:id="@+id/group1"
        android:layout_width="177dp"
        android:layout_height="127dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/zion"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/zion" />

        <RadioButton
            android:id="@+id/tacko"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/tacko" />

        <RadioButton
            android:id="@+id/kyle"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/kyle" />

        <RadioButton
            android:id="@+id/rj"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rj" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/group2"
        android:layout_width="112dp"
        android:layout_height="134dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="261dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/villanova"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/villa" />

        <RadioButton
            android:id="@+id/virginia"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/virg" />

        <RadioButton
            android:id="@+id/duke"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/duke" />

        <RadioButton
            android:id="@+id/gonzaga"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/zag" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/group3"
        android:layout_width="267dp"
        android:layout_height="34dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="537dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="160dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/True"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/t" />

        <RadioButton
            android:id="@+id/False"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/f" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="272dp"
        android:layout_height="23dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="594dp"
        android:text="1) Who was the MOP of MM 2019?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="275dp"
        android:layout_height="23dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="407dp"
        android:text="2) Who won MM 2019?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="262dp"
        android:layout_height="38dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="485dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="208dp"
        android:text="The MM 2019 championship was played in Minnesota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/check2"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="271dp"
        android:layout_marginTop="366dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="298dp"
        android:background="@android:color/holo_orange_light"
        android:text="check answers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="86dp"
        android:layout_height="79dp"
        android:layout_marginStart="271dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="457dp"
        android:background="@drawable/baskeball"
        android:text="go home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:onClick="backHome"/>

</androidx.constraintlayout.widget.ConstraintLayout>