<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WhoLike">

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="481dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="215dp"
        android:text="@string/cb10"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="250dp"
        android:text="@string/cb9"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="411dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="285dp"
        android:text="@string/cb8"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="320dp"
        android:text="@string/cb7"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="355dp"
        android:text="@string/cb6"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="306dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="390dp"
        android:text="@string/cb5"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="425dp"
        android:text="@string/cb4"
        android:textColor="@android:color/holo_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="530dp"
        android:text="@string/cb1"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="460dp"
        android:text="@string/cb3"
        android:textColor="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="495dp"
        android:text="@string/cb2"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="279dp"
        android:layout_height="36dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="612dp"
        android:text="March Madness T/F Quiz"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="212dp"
        android:layout_height="21dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="591dp"
        android:text="check all of the true statements"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/checkTF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="546dp"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="137dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tfView"
        android:layout_width="178dp"
        android:layout_height="63dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="531dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="137dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>